# 2026-Rebuilt

./: .bandit  .coveragerc  .deploy_cfg  .gitignore  Makefile  README.md  constants.py  env.sh  physics.py  pyproject.toml  requirements.txt  robot.py  robotcontainer.py  tox.ini
.wpilib/: wpilib_preferences.json
assets/Robot_2026FRCKitBotV1/: config.json
assets/Robot_BananaSplitV4/: config.json  model_3.glb
assets/Robot_CrabBotV3/: config.json
assets/Robot_DuckBotV3/: config.json
assets/Robot_MantaV1/: config.json  model_4.glb
assets/Robot_PrestoV3/: config.json
deploy/fields/: 2026-rebuilt-no-fuel-background.json  2026-rebuilt-no-fuel.json
deploy/pathplanner/autos/: AUTO-POS-1-UPPER-UPPER.auto
deploy/pathplanner/paths/: A1-N1.path  A2-N2.path  A3-N3.path  POS-1-ENTER-NEUTRAL-ZONE-UPPER.path  POS-1-EXIT-NEUTRAL-ZONE-UPPER.path  POS-1-REFUEL-UPPER-ONLY.path  POS-1-SHOOT-TO-UPPER.path  UPPER-TO-POS-1-SHOOT.path
docs/: Controller Mappings & Paths.pptx  TODO.md  TODO.txt  pykit-sequence.txt
lib_6107/: constants.py
lib_6107/commands/: _command_template.py  _commandgroup_template.py  command.py
lib_6107/commands/camera/: approach_tag.py  find_object.py  follow_object.py  track_tag_command.py  turn_to_object.py
lib_6107/commands/drivetrain/: _command_template.py  aimtodirection.py  arcade_drive.py  gotopoint.py  reset_xy.py  swervetopoint.py  trajectory.py
lib_6107/subsystems/gyro/: gyro.py  pigeon2.py
lib_6107/subsystems/pykit/: ctre_swervedrive.py  gyro_io.py  robot_state.py  swervedrive_io.py  vision_io.py
lib_6107/subsystems/vision/: limelightvision.py  photonvision_sim.py  visionsubsystem.py
lib_6107/util/: asyncio_wrapper.py  field.py  logged_timed_command_robot.py  phoenix6_telemetry.py  statistics.py
robot/: constants.py  physics.py  pyproject.toml  requirements.txt  robot.py  robotcontainer.py  version.py
robot/autonomous/: pathplanner.py
robot/commands/autonomous/: pathplanner.py
robot/commands/intake/: intake_commands.py
robot/deploy/pathplanner/: navgrid.json  settings.json
robot/deploy/pathplanner/autos/: AUTO-B1.auto  AUTO-POS-1-UPPER-UPPER.auto
robot/deploy/pathplanner/paths/: AUTO-B1-INITIAL-TURN-AND-SHOOT.path  AUTO-B1-REFUEL-UPPER-ONLY.path  AUTO-CLIMB-POS1-1-RUNG.path  Loop around 2 tables.path  POS-1-CLIMB-RUNG.path  POS-1-ENTER-NEUTRAL-ZONE-LOWER.path  POS-1-ENTER-NEUTRAL-ZONE-MIDDLE.path  POS-1-ENTER-NEUTRAL-ZONE-UPPER.path  POS-1-EXIT-NEUTRAL-ZONE-UPPER.path  POS-1-INITIAL-TURN-AND-SHOOT.path  POS-1-REFUEL-UPPER-ONLY.path  POS-1-SHOOT-TO-UPPER.path  UPPER-TO-POS-1-SHOOT.path
robot/deprecated/: physics.py
robot/field/: field_2026.py
robot/frc_2026/: constants.py  field-2025.py  field.py  robotcontainer.py
robot/frc_2026/commands/: holonomicdrive.py
robot/frc_2026/commands/swervedrive/auto/: auto_balance_command.py
robot/frc_2026/commands/swervedrive/drivebase/: absolute_drive.py  absolute_drive_adv.py  absolute_field_drive.py
robot/frc_2026/subsystems/: constants.py
robot/frc_2026/subsystems/swervedrive/: constants.py  constants2025.py  drivesubsystem.py  drivesubsystem2025.py  swerveutils.py
robot/lib_6107/: constants.py
robot/lib_6107/commands/: _command_template.py  command.py  pathplanner.py
robot/lib_6107/commands/camera/: approach_tag.py  find_object.py  follow_object.py  set_camera_pipeline.py  track_tag_command.py
robot/lib_6107/commands/drivetrain/: _command_template.py  aimtodirection.py  approach_tag.py  arcade_drive.py  gotopoint.py  reset_xy.py  swervetopoint.py  trajectory.py
robot/lib_6107/subsystems/: limelight_camera.py  limelight_localizer.py  photon_localizer.py  photontag_camera.py  photonvision_camera.py
robot/lib_6107/subsystems/gyro/: gyro.py  navx.py  pigeon2.py
robot/lib_6107/subsystems/pykit/: ctre_swervedrive.py  gyro_io.py  robot_state.py  swervedrive_io.py
robot/lib_6107/subsystems/vision/: limelightvision.py  photonvision.py  visionsubsystem.py
robot/lib_6107/util/: README (LoggedTimedCommand).md  asyncio_wrapper.py  game.py  logged_timed_command_robot.py  phoenix6_signals.py  phoenix6_telemetry.py  statistics.py
robot/subsystems/: rev_shooter.py
robot/subsystems/shooter/: rev_shooter.py
robot/subsystems/swervedrive/: constants.py  drivesubsystem.py  swervemodule.py
robot/util/: telemetry.py
robot_2026/commands/: holonomicdrive.py
robot_2026/commands/autonomous/: pathplanner.py
robot_2026/commands/intake/: intake_commands.py
robot_2026/field/: __init__.py  field_2026.py
robot_2026/subsystems/: rev_shooter.py
robot_2026/util/: logtracer.py  telemetry.py
tests/: requirements.txt
(+11 files in other folders)
